--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-<h2 class="text-center">AngularJS Boilerplate</h2>
+<h2 class="text-center">Fan Findr</h2>
 
 <!-- slider directive -->
 <div myslider>
