--- a/styles/partials/_functions.scss
+++ b/styles/partials/_functions.scss
@@ -3,3 +3,12 @@
 Functions
 
 ******************************************************************/
+#map {
+    height:420px;
+    width:600px;
+}
+.infoWindowContent {
+    font-size:  14px !important;
+    border-top: 1px solid #ccc;
+    padding-top: 10px;
+}
