--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-<div id="fanFinderWrapper">
+<div id="fanFinderWrapper">b
 	<div class="content">
 		<!-- Google Maps -->
 		<div id="map"></div>
@@ -9,8 +9,8 @@
 
 		    <select name="singleSelect" ng-model="data.singleSelect" class="teamSelect">
 		    	<option value="">Please select team</option>
-		      <option value="option-1">Option 1</option>
-		      <option value="option-2">Option 2</option>
+		      <option value="option-1">Packers</option>
+		      <option value="option-2">Falcons</option>
 		    </select>
 		  </form>
 		
