removed error from characters being left in code

--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-<div id="fanFinderWrapper">b
+<div id="fanFinderWrapper">
 	<div class="content">
 		<!-- Google Maps -->
 		<div id="map"></div>
@@ -10,6 +10,29 @@
 		    <select name="singleSelect" ng-model="data.singleSelect" class="teamSelect">
 		    	<option value="">Please select team</option>
 		      <option value="option-1">Packers</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-1">Packers</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-1">Packers</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-1">Packers</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-1">Packers</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
+		      <option value="option-2">Falcons</option>
 		      <option value="option-2">Falcons</option>
 		    </select>
 		  </form>
